# py-atlassian-page-client

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: test.yml
atlassian_page_client/: __init__.py  attachment_client.py  blog_client.py  client.py  client_factory.py  content.py  page.py  page_client.py  page_content.py
tests/: __init__.py  conftest.py  test_attachment_client.py  test_blog_client.py  test_client.py  test_client_factory.py  test_content.py  test_integration.py  test_package_imports.py  test_page.py  test_page_client.py  test_page_content.py
