[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlassian-page-client"
version = "0.1.0"
authors = [
    {name = "Yannick Zimmermann", email = "yannick.zimmermann@proton.me"},
]
description = "A Python client library for interacting with Atlassian Confluence pages"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["atlassian", "confluence", "wiki", "api", "client"]
dependencies = [
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "pytest-mock>=3.6.1",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.812",
]

[project.urls]
"Homepage" = "https://github.com/zimmer-yan/py-atlassian-page-client"
"Bug Reports" = "https://github.com/zimmer-yan/py-atlassian-page-client/issues"
"Source" = "https://github.com/zimmer-yan/py-atlassian-page-client"

[tool.setuptools.packages.find]
where = ["."]
include = ["atlassian_page_client*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
